--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ Systemdb.db-journal
 __pycache__/database.cpython-311.pyc
 /__pycache__
 /__pycache__
+__pycache__/database.cpython-311.pyc
+Systemdb.db
+Systemdb.db
